--- a/.tmux.config
+++ b/.tmux.config
@@ -1,4 +1,4 @@
-st of plugins
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
